#400 Move ImmutableList from inheritance to composition.